<resources>
    <string name="app_name">Domophone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="two_min">2 min</string>
    <string name="five_min">5 min</string>
    <string name="ten_min">10 min</string>
    <string name="fifteen_min">15 min</string>
    <string name="thirteen_min">30 min</string>
    <string name="sixteen_min">60 min</string>
    <string name="cancel">stop</string>
</resources>