<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/wuf"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:constraint_referenced_ids="twoMin, fiveMin, tenMin, fifteenMin, thirteenMin, sixteenMin, cancelButton"
        app:flow_maxElementsWrap="3"
        app:flow_verticalGap="8dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/twoMin"
        style="@style/Theme.Domophone.DurationButton"
        android:text="@string/two_min"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fiveMin"
        style="@style/Theme.Domophone.DurationButton"
        android:text="@string/five_min"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tenMin"
        style="@style/Theme.Domophone.DurationButton"
        android:text="@string/ten_min"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fifteenMin"
        style="@style/Theme.Domophone.DurationButton"
        android:text="@string/fifteen_min"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/thirteenMin"
        style="@style/Theme.Domophone.DurationButton"
        android:text="@string/thirteen_min"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sixteenMin"
        style="@style/Theme.Domophone.DurationButton"
        android:text="@string/sixteen_min"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Theme.Domophone.DurationButton"
        android:text="@string/cancel"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>